2002-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lookup.cc (slur): Invoke bezier-bow.

	* scm/tex.scm (bezier-bow): 
	* scm/ps.scm (bezier-bow): Bezier sandwich with rounded endings
	(Previously named bezier-sandwich).
	
	* scm/tex.scm (bezier-sandwich):
	* scm/ps.scm (bezier-sandwich): Plain bezier sandwich.

	* make/lilypond.mandrake.spec.in (post): 
	* make/lilypond.suse.spec.in (post): 
	* make/lilypond.redhat.spec.in (post): Also remove parmesan fonts.
	
	* tex/lilyponddefs.tex: Uncomment feta character support.

	* Documentation/user/refman.itely (Pitches): Add espanol.ly
	description.

	* ly/catalan.ly: Add comment about (spanish) -s suffix.

	* ly/espanol.ly: Spanish note names by Carlos Garc'ia Su'arez
	<cgscqmp@terra.es>.

2002-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (short-examples):
	(long-examples): Bugfix for --srcdir build.
	(top-web): Rewrite weblist find command.

	* stepmake/bin/config.sub: 
	* stepmake/bin/config.guess: Update from latest autotools.

	* aclocal.m4:
	* autogen.sh: Regenerate.
	
	* configure.in: 
	* stepmake/configure.in: 
	* stepmake/aclocal.m4: Run autoupdate.  Creating ./configure now
	requires autoconf >= 2.50.

	* stepmake/autogen.sh: Check for autoconf >= 2.50.

	* Documentation/user/refman.itely: Bugfix for tablature example.

	* Documentation/windows/compiling.texi: Update for new and
	improved setup.

2002-06-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/spacing-spanner.cc (find_shortest): make 1/8 configurable:
	introduce base-shortest-duration

	* lily/parser.yy (music_output_def_body): don't crash when \tempo
	in unexpected \midi{} is found.

2002-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/GNUmakefile.in: Don't install stepmake.  This breaks
	the use of make/ly.make for use as an external makefile.  Probably
	noone except for myself ever used this anyway.

	* stepmake/stepmake/GNUmakefile (INSTALLATION_DIR): Bugfix: Adapt
	to new $datadir convention (<package>/<version>).